--- a/wallet/res/layout/backup_wallet_dialog.xml
+++ b/wallet/res/layout/backup_wallet_dialog.xml
@@ -19,6 +19,13 @@
             android:layout_marginTop="@dimen/list_entry_padding_vertical"
             android:text="@string/backup_wallet_dialog_message" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/list_entry_padding_vertical"
+            android:layout_marginTop="@dimen/list_entry_padding_vertical"
+            android:text="@string/backup_wallet_dialog_pasword_length" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
