--- a/wallet/res/layout/send_coins_fragment.xml
+++ b/wallet/res/layout/send_coins_fragment.xml
@@ -33,7 +33,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/send_coins_payee_verified_by"
@@ -69,7 +70,8 @@
                     android:ellipsize="end"
                     android:maxLines="3"
                     android:singleLine="false"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:visibility="gone"/>
 
                 <TextView
                     android:id="@+id/send_coins_receiving_static_address"
